--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           cache-dependency-path: client/package-lock.json
       - run: npm ci
       - name: Run tests
-        run: npm test -- --coverage
+        run: npm test
       - name: Upload coverage
         if: always()
         uses: actions/upload-artifact@v4
